# projet-test-aws

./: .dvcignore  .gitignore  COOKIECUTTER_FOLLOWUP.md  README.md  alembic.ini  cursorrules  docker-compose.prod.yml  docker-compose.yml  env.sample  makefile  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  roadmap.md  tailwind.config.js
.github/workflows/: build-and-push.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_email_verification_expires.py  0003_init_roles.py  0004_organizations_foundation.py  4ad2c19142fd_add_projects_and_project_users.py  b2b4f374fc0b_add_projects_and_project_users.py  c43e59031ab2_add_projects_and_project_users.py
configs/: data.yaml  features.yaml  serve.yaml  train.yaml
docs/: DEPLOYMENT.md  GUIDE_UTILISATEUR.md  LOGS.md  README.md  architecture.md  configuration.md
infra/docker/: Dockerfile.app  Dockerfile.auth
infra/terraform-aws/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/terraform-aws-simple/: CHECKLIST_SAUVEGARDE.md  README.md  TEST_GUIDE.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/terraform-scaleway/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: create_admin.py  deploy-aws.sh  deploy-scaleway.sh  deploy.sh  mlflow_ui.py  reset_admin_password.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_health_check.py  test_integration.py  test_pipeline.py
(+93 files in other folders)
